# DOA_Android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jabra/doa/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: data_0.raw  doa_quantize.dlc
app/src/main/cpp/: CMakeLists.txt  GNSetBuilderOptions.cpp  LoadInputTensor.cpp  SaveOutputTensor.cpp  doa.cpp  doa.h  native-lib.cpp
app/src/main/cpp/arm_cfft/Source/: CMakeLists.txt
app/src/main/cpp/arm_cfft/Source/TransformFunctions/: CMakeLists.txt
app/src/main/cpp/fft/: CMakeLists.txt
app/src/main/cpp/include/: GNSetBuilderOptions.hpp
app/src/main/cpp/snpe-sdk/include/zdl/DiagLog/: Options.hpp
app/src/main/cpp/snpe-sdk/include/zdl/DlContainer/: IDlContainer.hpp
app/src/main/cpp/snpe-sdk/include/zdl/SNPE/: PSNPE.hpp
app/src/main/java/com/jabra/doa/: DOAInference.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/jabra/doa/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
